--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,13 @@
 # ----------------------- #
 
 url: http://configurator.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Food for Thought
+subtitle: The random ruminations of a software-and-food guy
+author: configurator
 simple_search: http://google.com/search
 description:
+
+category_feeds: true
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -27,7 +29,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:categories/:title/
 source: source
 destination: public
 plugins: plugins
@@ -63,7 +65,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: configurator
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -78,7 +80,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: 112139137835193833820
 googleplus_hidden: false
 
 # Pinboard
@@ -90,11 +92,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: theconfigurator
+disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-45488829-1
 
 # Facebook Like
 facebook_like: false
