--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Food for Thought
 subtitle: The random ruminations of a software-and-food guy
 author: configurator
 simple_search: http://google.com/search
-description:
+description: A software guy who owns a restaurant talks about stuff.
 
 category_feeds: true
 
