--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"useTabs": true,
 		"tabWidth": 4,
 		"semi": true,
-		"trailingComma": "all"
+		"trailingComma": "all",
+		"printWidth": 120
 	}
 }
